<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">



    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/a2_btn_tasklist"
        android:textSize="20sp"
        android:textColor="#0000FF"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/a2_btn_addnewtask"
        android:id="@+id/a2_list_btn_addnew"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textColor="#0000FF"
        android:textStyle="bold" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/a2_til_taskid"
            android:textSize="16dp"
            android:textStyle="bold"
            android:id="@+id/a2_list_tv_taskid" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/a2_til_title"
            android:id="@+id/a2_list_tv_title"
            android:layout_weight="1"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/a2_til_duration"
            android:id="@+id/a2_list_tv_duration"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/a2_til_date"
            android:id="@+id/a2_list_tv_date"
            android:layout_weight="1"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/a2_list_lv_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8" />



</LinearLayout>