<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:orientation="vertical"
    android:padding="6dip" >

    <TextView
        android:id="@+id/a2_details_tv_pagetitle"
        android:text="@string/a2_til_taskdetail"

        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"


        android:gravity="center"
        android:layout_gravity="center"

        android:textColor="#0000FF"
        android:singleLine="true"
        android:textIsSelectable="false"
         />

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/a2_details_tv_til_title"
            android:text="@string/a2_til_title"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_gravity="center"
            android:gravity="center_vertical"
             />

        <EditText
            android:id="@+id/a2_details_tv_title"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/a2_details_tv_til_category"
            android:text="@string/a2_til_category"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_gravity="center"
            android:gravity="center_vertical"

            android:textIsSelectable="false" />

        <EditText
            android:id="@+id/a2_details_tv_category"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_gravity="center"
             />

        <Button
            android:id="@+id/a2_details_btn_summary"
            android:text="@string/a2_btn_summary"

            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"

            android:gravity="center"
            android:textColor="#0000FF"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/a2_details_tv_summary"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"/>

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/a2_details_tv_til_duration"
            android:text="@string/a2_til_duration"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_gravity="center"
            android:gravity="center_vertical"/>

        <EditText
            android:id="@+id/a2_details_tv_duration"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:layout_gravity="center"
            android:inputType="textPassword|number"
            android:password="false"
             />

    </LinearLayout>

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/a2_details_tv_til_poriority"
            android:text="@string/a2_til_priority"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"


            android:layout_gravity="center"
            android:gravity="center_vertical"
             />

        <EditText
            android:id="@+id/a2_details_tv_poriority"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:layout_gravity="center"
            android:focusable="false"/>

    </LinearLayout>


    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/a2_details_tv_til_note"
            android:text="@string/a2_til_note"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_gravity="center"
            android:gravity="center_vertical"
                 />

        <EditText
            android:id="@+id/a2_details_tv_note"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
             />

    </LinearLayout>

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/a2_details_tv_til_date"
            android:text="@string/a2_til_date"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_gravity="center"
            android:gravity="center_vertical"
             />

        <EditText
            android:id="@+id/a2_details_tv_date"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:layout_gravity="center"
            android:focusable="false"
             />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/a2_details_btn_save"
            android:text="@string/a2_btn_save"

            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"

            android:layout_gravity="center"
            android:gravity="center"

            android:textColor="#0000FF"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/a2_details_btn_delete"
            android:text="@string/a2_btn_delete"

            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"

            android:layout_gravity="center"
            android:gravity="center"

            android:textColor="#0000FF"
            android:textStyle="bold"
             />


        <Button
            android:id="@+id/a2_details_btn_cancel"
            android:text="@string/a2_btn_cancel"

            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"

            android:layout_gravity="center"
            android:gravity="center"

            android:textColor="#0000FF"
            android:textStyle="bold"/>
    </LinearLayout>



</LinearLayout>