<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/a2_fragment_newtask"
    android:orientation="vertical">



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/a2_til_title"
                android:id="@+id/a2_new_tv_title" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="left"
                android:id="@+id/a2_new_et_title" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/a2_new_ll_category"
            android:layout_weight="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/a2_til_category"
                android:id="@+id/a2_new_tv_category"
                android:singleLine="true" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/a2_new_et_category"
                android:gravity="left"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/a2_til_duration"
                android:id="@+id/a2_new_tv_duration"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/a2_new_et_duration"
                android:gravity="left"
                android:inputType="textPassword|number"
                android:password="false"
                android:layout_weight="2" />



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/a2_til_priority"
            android:id="@+id/a2_new_tv_poriority"
             />

        <Spinner
            android:id="@+id/a2_new_sp_poriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:entries="@array/a2_priority_array"
            android:gravity="center_vertical"
             />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/a2_til_note"
            android:id="@+id/a2_new_tv_note"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/a2_new_et_note"
            android:gravity="left"
            android:layout_weight="2" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:text="@string/a2_btn_tasklist"
            android:id="@+id/a2_new_btn_list"
            android:layout_gravity="left"
            android:textColor="#0000FF"
            android:gravity="center"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a2_btn_save"
            android:textColor="#0000FF"
            android:layout_gravity="right"
            android:id="@+id/a2_new_Btn_save"
             />
    </LinearLayout>


</LinearLayout>
